setup meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="من علیرضا قدیانی هستم برنامه نویس فرانت اند , علاقمند به برنامه نویسی و طراحی وبسایت و جونیور در حوزه فرانت اند و آماده برای همکاری با مجموعه ای حرفه ای برای کسب تجربه و یادگیری و کار تیمی"/>
     <title>Alireza Ghadyani | Portfolio</title>
   </head>
   <body>
