ready to build and deploy

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="من علیرضا قدیانی هستم برنامه نویس فرانت اند , علاقمند به برنامه نویسی و طراحی وبسایت و جونیور در حوزه فرانت اند و آماده برای همکاری با مجموعه ای حرفه ای برای کسب تجربه و یادگیری و کار تیمی"/>
     <title>Alireza Ghadyani | Portfolio</title>
+    <link rel="shortcut icon" type="image/png" href="./Images/favicon.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
